Refactor App component and update translation.json

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,5 +1,5 @@
 {
-    "done": "Order done",
+    "complete": "Order done",
     "preparation": "preparation...",
     "error": "Order doesn't exist."
 }
