Update translation strings for order status

--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -1,5 +1,5 @@
 {
     "complete": "Bestellung abgeschlossen",
-    "preparation": "Bestellung wird vorbereitet",
+    "pending": "Bestellung wird vorbereitet",
     "error": "Bestellung nicht gefunden."
 }
