--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -1,5 +1,5 @@
 {
     "complete": "Commande traitée",
-    "preparation": "Préparation de la commande",
+    "pending": "Préparation de la commande",
     "error": "Commande non trouvée."
 }
