--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -1,5 +1,5 @@
 {
     "complete": "Ordine completato",
-    "preparation": "Preparazione dell'ordine",
+    "pending": "Preparazione dell'ordine",
     "error": "Ordine non trovato."
 }
